working shapefile reading with attributes